# mp3-to-mp4

./: .coverage  .gitignore  LICENSE.md  README.md  changelog.md  pyproject.toml
mp3_to_mp4/: __init__.py  __main__.py  cli.py  config.py  create_image.py  mp3_to_mp4.py  render.py  renderer.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_create_image.py  test_renderer.py  test_utils.py
